# windprofiles-legacy

./: .gitignore  README.md  pyproject.toml  summaryexplain.txt
analysis/: finalplots.py  ipplot.py  kcc.py  kcc_definitions.py  ttu.py  ttu_WE.py  ttu_definitions.py
attempted-rework/kcc/: data.py
attempted-rework/quantities/: __init__.py  core.py  dimensions.py  variables.py
attempted-rework/structures/: classify.py  location.py  metdata.py  timeseries.py
docs/: sonic_explain.txt
new/: classify.py  compute.py  convert.py  kcc.py  preprocess.py  tests.py
new/lib/: polar.py
results/9056151988562825927/: summary.json
results/fig_tabular/: annual_profiles_fig8.csv  ti_profiles_fig12.csv  veer_profiles_fig11.csv
results/recent/: summary.json
src/: combine.py  customroses.py  helper_functions.py  mylogging.py  newplots.py  newsonic.py  plot_sonic.py  plots.py  reduce.py  roses.py  sonic.py  windroses.py  windroses_new.py
src/old/: plot_sonic.py  profiles.py
src/old_rose/: windroses_new.py  windroses_old.py
src_old/: helper_functions.py  newsonic.py  plots.py  roses.py
src_old/old/: old_README.md  windroses_new.py
tests/: tests.py
windprofiles/: analyze.py  classify.py  compute.py  ipplot.py  plotting.py  preprocess.py  sonic.py  storms.py
windprofiles/lib/: atmos.py  other.py  polar.py  stats.py
