[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WindProfiles"
version = "0.0.1"
description = "Wind profile data analysis and characterization related to GLWind project"
readme = "README.md"  # The content type is inferred automatically
license = { text = "LICENSE.txt" }
authors = [
    { name = "Elliott Walker", email = "walker.elliott.j@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "tqdm",
    "scipy",
    "windrose"
]

[project.urls]
Source = "https://github.com/Intergalactyc/windprofile_characterization"
Homepage = "https://github.com/Intergalactyc/windprofile_characterization"

[tool.setuptools.packages.find]
where = ["."]
include = ["windprofiles*"]
